--- a/FragmentNavController/app/build.gradle
+++ b/FragmentNavController/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.navigation:navigation-fragment:2.4.1'
     implementation 'androidx.navigation:navigation-ui:2.4.1'
+    implementation 'com.android.volley:volley:1.2.1'
     def nav_version = "2.5.3"
 
     // Java language implementation
